--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "concurrently": "^5.0.2",
+    "jest-fetch-mock": "^3.0.1",
+    "materialize-css": "^1.0.0-rc.2",
+    "node-sass": "^4.13.1",
+    "notistack": "^0.9.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
@@ -17,9 +27,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --coverage",
-    "coverage": "react-scripts test --env=jsdom --coverage",
+    "test": "react-scripts test --env=jsdom --coverage --verbose",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "dev": "concurrently \"yarn start\" \"yarn sass:watch\"",
+    "sass:watch": "node-sass-chokidar ./src/styles/scss -o ./src/styles/css --watch",
+    "sass:build": "node-sass-chokidar ./src/styles/scss -o ./src/styles/css",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
