--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -54,6 +55,5 @@
     "coveralls": "^3.0.9",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "redux-logger": "^3.0.6"
   }
 }
