--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
   "devDependencies": {
     "coveralls": "^3.0.9",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-adapter-react-16": "^1.15.2"
   }
 }
