Add create and read articles

--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "Dante2": "^0.5.0-rc4",
     "concurrently": "^5.0.2",
+    "fetch-mock": "^9.0.0-beta.2",
     "jest-fetch-mock": "^3.0.1",
+    "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.13.1",
     "notistack": "^0.9.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-content-loader": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.7",
