--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "Dante2": "^0.5.0-rc4",
+    "awesome-debounce-promise": "^2.1.0",
     "concurrently": "^5.0.2",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
     "draft-js-import-html": "^1.4.1",
