--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -72,7 +73,9 @@
       "!node_modules/",
       "!src/index.js",
       "!src/containers/Article/Create/index.js",
+      "!src/containers/UpdateArticle/index.js",
       "!src/registerServiceWorker.js",
+      "!src/components/Editor/",
       "!src/routes.js"
     ]
   }
