--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-avatar": "^3.9.2",
     "react-content-loader": "^5.0.1",
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
