--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "sweetalert": "^2.1.2"
@@ -66,7 +65,8 @@
   "devDependencies": {
     "coveralls": "^3.0.9",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+    "enzyme-adapter-react-16": "^1.15.2",
+    "redux-logger": "^3.0.6"
   },
   "jest": {
     "collectCoverageFrom": [
