--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tiptap/react": "^2.0.0-beta.46",
+    "@tiptap/starter-kit": "^2.0.0-beta.77",
     "Dante2": "^0.5.0-rc4",
     "awesome-debounce-promise": "^2.1.0",
     "concurrently": "^5.0.2",
@@ -22,6 +24,7 @@
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-audio-player": "^0.17.0",
     "react-avatar": "^3.9.2",
     "react-content-loader": "^5.0.1",
     "react-dom": "^16.12.0",
