--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "Dante2": "^0.5.0-rc4",
     "awesome-debounce-promise": "^2.1.0",
     "concurrently": "^5.0.2",
+    "css-loader": "^5.2.6",
     "draft-js-dnd-plugin": "^2.0.0-beta1",
     "draft-js-import-html": "^1.4.1",
     "fetch-mock": "^9.0.0-beta.2",
     "jest-fetch-mock": "^3.0.1",
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0-rc.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^6.0.0",
     "notistack": "^0.9.7",
+    "postcss-loader": "^6.1.0",
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -32,12 +34,14 @@
     "react-google-login": "^5.0.7",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.3",
     "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.1.0",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
