--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tiptap/extension-font-family": "^2.0.0-beta.13",
+    "@tiptap/extension-text-style": "^2.0.0-beta.16",
     "@tiptap/react": "^2.0.0-beta.46",
     "@tiptap/starter-kit": "^2.0.0-beta.77",
     "Dante2": "^0.5.0-rc4",
